--- a/notebooks/infer jitter.ipynb
+++ b/notebooks/infer jitter.ipynb
@@ -81,12 +81,38 @@
     "def ln_normal(x, mu, std):\n",
     "    return -0.5*( ((x-mu) / std)**2 + np.log(2*np.pi*std**2))\n",
     "\n",
+    "def ln_normal_mixture(x, amp, mu, std):\n",
+    "    n_components = len(amp)\n",
+    "    \n",
+    "    lls = []\n",
+    "    for j in range(n_components):\n",
+    "        lls.append(ln_normal(x, mu[j], std[j]) + np.log(amp[j]))\n",
+    "    \n",
+    "    return logsumexp(lls, axis=0)\n",
+    "\n",
     "# test against (slower) scipy implementation:\n",
     "from scipy.stats import norm\n",
     "derp = np.random.uniform(-2, 2, size=100)\n",
     "pars = np.random.uniform(1E-3, 10, size=2)\n",
     "assert np.allclose(norm.logpdf(derp, loc=pars[0], scale=pars[1]),\n",
+    "                   ln_normal(derp, *pars))\n",
+    "\n",
+    "assert np.allclose(ln_normal_mixture(derp, [1.], [pars[0]], [pars[1]]),\n",
     "                   ln_normal(derp, *pars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(-10, 10, 1024)\n",
+    "\n",
+    "plt.plot(x, np.exp(ln_normal_mixture(x, [0.2, 0.8], [-4, 4], [0.5, 1])), \n",
+    "         marker='')\n",
+    "plt.axvline(-4)\n",
+    "plt.axvline(4)"
    ]
   },
   {
@@ -447,41 +473,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ln_likelihood_slow(pars, y, K, ln_prior0):\n",
-    "    mu, std = pars   \n",
+    "x = np.random.random(size=1000)\n",
+    "%timeit ln_normal_mixture(x, [0.2, 0.8], [1, 10], [1, 5])\n",
+    "%timeit ln_normal(x, 0.2, 0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Model:\n",
     "    \n",
-    "    ll = np.zeros(y.shape[0])\n",
-    "    for n in range(y.shape[0]):\n",
-    "        delta_ln_prior = ln_normal(y[n, :K[n]], mu, std) - ln_prior0[n, :K[n]]\n",
-    "        ll[n] = logsumexp(delta_ln_prior) - np.log(K[n])\n",
+    "    def __init__(self, y_nk, K_n, ln_p0, n_components=1):\n",
+    "        self.y = y_nk\n",
+    "        self.K = K_n\n",
+    "        self.ln_p0 = ln_p0\n",
+    "        self.n_components = int(n_components)\n",
     "        \n",
-    "    return ll\n",
+    "        self.ln_norm_func = ln_normal\n",
+    "        if self.n_components > 1:\n",
+    "            self.ln_norm_func = ln_normal_mixture\n",
     "\n",
-    "def ln_likelihood(pars, y, K, ln_prior0):\n",
-    "    \"\"\" Original, single Gaussian implementation \"\"\"\n",
-    "    mu, std = pars      \n",
-    "    delta_ln_prior = ln_normal(y, mu, std) - ln_prior0\n",
-    "    delta_ln_prior[np.isnan(delta_ln_prior)] = -np.inf\n",
-    "    ll = logsumexp(delta_ln_prior, axis=1) - np.log(K)\n",
-    "    return ll\n",
-    "\n",
-    "def ln_prob(pars, y, K, ln_prior0):\n",
-    "    # TODO: prior over mu, std of jitter param distribution\n",
-    "    lp = 0.\n",
+    "    def ln_likelihood(self, **kwargs):\n",
+    "        \"\"\" Original, single Gaussian implementation \"\"\"\n",
+    "        delta_ln_prior = self.ln_norm_func(self.y, **kwargs) - self.ln_p0\n",
+    "        delta_ln_prior[np.isnan(delta_ln_prior)] = -np.inf\n",
+    "        return logsumexp(delta_ln_prior, axis=1) - np.log(self.K)\n",
     "    \n",
-    "    ll_n = ln_likelihood(pars, y, K, ln_prior0)\n",
+    "    def ln_prior(self, **kwargs):\n",
+    "        lp = 0.\n",
+    "        \n",
+    "        amp = kwargs.get('amp', None)\n",
+    "        if amp is not None:\n",
+    "            amp = np.array(amp)\n",
+    "            if amp.sum() > 1:\n",
+    "                return -np.inf\n",
+    "            \n",
+    "            if np.any(amp < 0):\n",
+    "                return -np.inf\n",
+    "        \n",
+    "        # enforce ordering of the means\n",
+    "        if not np.allclose(np.argsort(kwargs['mu']), np.arange(self.n_components)):\n",
+    "            return -np.inf\n",
+    "        \n",
+    "        # 1/sigma prior\n",
+    "        lp += -np.sum(np.log(kwargs['std'])) \n",
+    "        \n",
+    "        return lp\n",
     "    \n",
-    "    if not np.all(np.isfinite(ll_n)):\n",
-    "        return -np.inf\n",
+    "    def unpack_pars(self, pars):\n",
+    "        # TODO:\n",
+    "        if self.n_components == 1:\n",
+    "            mu, std = pars\n",
+    "            return dict(mu=mu, std=std)\n",
+    "            \n",
+    "        else:\n",
+    "            amp = np.concatenate((pars[:self.n_components-1], [1-sum(pars[:self.n_components-1])]))\n",
+    "            mu = pars[self.n_components-1:2*self.n_components-1]\n",
+    "            std = pars[2*self.n_components-1:]\n",
+    "            return dict(amp=amp, mu=mu, std=std)\n",
     "    \n",
-    "    return np.sum(ll_n)\n",
+    "    def pack_pars(self, mu, std, amp=None):\n",
+    "        pass\n",
     "\n",
-    "# check that the null masking is working\n",
-    "test_pars = [np.random.uniform(-5, 5),\n",
-    "             np.random.uniform(1E-3, 5)]\n",
+    "    def ln_prob(self, pars_vec):\n",
+    "        pars_kw = self.unpack_pars(pars_vec)\n",
+    "        \n",
+    "        lp = self.ln_prior(**pars_kw)\n",
+    "        if not np.isfinite(lp):\n",
+    "            return -np.inf\n",
     "\n",
-    "assert np.allclose(ln_likelihood_slow(test_pars, y_nk, K_n, ln_p0),\n",
-    "                   ln_likelihood(test_pars, y_nk, K_n, ln_p0))"
+    "        ll_n = self.ln_likelihood(**pars_kw)\n",
+    "        if not np.all(np.isfinite(ll_n)):\n",
+    "            return -np.inf\n",
+    "\n",
+    "        return np.sum(ll_n)\n",
+    "    \n",
+    "    def __call__(self, p):\n",
+    "        return self.ln_prob(p)"
    ]
   },
   {
@@ -494,10 +565,9 @@
     "# slc = np.array([512,777])# + list(range(100))) # the two minmax stars above\n",
     "slc = (slice(None),) # all\n",
     "# slc = np.array([225, 139])\n",
-    "args = (y_nk[slc], K_n[slc], ln_p0[slc])\n",
     "\n",
-    "(ln_likelihood([-2, 4.], *args),\n",
-    " ln_likelihood([2, 4.], *args))"
+    "mm = Model(y_nk[slc], K_n[slc], ln_p0[slc])\n",
+    "mm([-2, 4.]), mm([2, 4.])"
    ]
   },
   {
@@ -526,7 +596,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.std(y_nk[slc].ravel()[y_nk[slc].ravel() < 9999])"
+    "mm = Model(y_nk[slc], K_n[slc], ln_p0[slc])\n",
+    "\n",
+    "# Single-component likelihood\n",
+    "sigma_y = 2.\n",
+    "# sigma_y = np.std(y_nk[slc].ravel())\n",
+    "\n",
+    "lls = []\n",
+    "vals = np.linspace(-5, 15, 128)\n",
+    "for val in vals:\n",
+    "    lls.append(mm([val, sigma_y]).sum())\n",
+    "    \n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12,5), sharex=True)\n",
+    "\n",
+    "axes[0].plot(vals, lls)\n",
+    "axes[0].set_ylabel(r'$\\ln p(\\{D_n\\}|\\alpha)$')\n",
+    "axes[1].plot(vals, np.exp(lls - np.max(lls)))\n",
+    "axes[1].set_ylabel(r'$p(\\{D_n\\}|\\alpha)$')\n",
+    "\n",
+    "# axes[1].axvline(np.mean(y_nk[slc].ravel()))\n",
+    "\n",
+    "axes[0].set_xlabel(r'$\\mu_y$')\n",
+    "axes[1].set_xlabel(r'$\\mu_y$')\n",
+    "\n",
+    "axes[0].xaxis.set_ticks(np.arange(vals.min(), vals.max()+1, 2))\n",
+    "\n",
+    "fig.tight_layout()"
    ]
   },
   {
@@ -535,14 +630,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Single-component likelihood\n",
-    "sigma_y = 2.\n",
-    "# sigma_y = np.std(y_nk[slc].ravel())\n",
+    "# Mixture model\n",
+    "mmix = Model(y_nk[slc], K_n[slc], ln_p0[slc], \n",
+    "             n_components=2)\n",
     "\n",
     "lls = []\n",
     "vals = np.linspace(-5, 15, 128)\n",
     "for val in vals:\n",
-    "    lls.append(ln_likelihood([val, sigma_y], *args).sum())\n",
+    "    lls.append(mmix([0.8, val, 10, 2, 2]))\n",
     "    \n",
     "fig, axes = plt.subplots(1, 2, figsize=(12,5), sharex=True)\n",
     "\n",
@@ -579,7 +674,7 @@
     "std_grid = np.logspace(-3, 1.5, 25)\n",
     "mu_grid, std_grid = np.meshgrid(mu_grid, std_grid)\n",
     "\n",
-    "probs = np.array([ln_prob([m, v], *args) \n",
+    "probs = np.array([mm([m, v]) \n",
     "                  for (m, v) in zip(mu_grid.ravel(), std_grid.ravel())])"
    ]
   },
@@ -648,8 +743,8 @@
    },
    "outputs": [],
    "source": [
-    "nwalkers = 16\n",
-    "p0 = np.random.normal([5, 4.], [1E-3, 1E-3], size=(nwalkers, 2))"
+    "mmix = Model(y_nk[slc], K_n[slc], ln_p0[slc], \n",
+    "             n_components=2)"
    ]
   },
   {
@@ -658,9 +753,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampler = emcee.EnsembleSampler(nwalkers, dim=2, lnpostfn=ln_prob,\n",
-    "                                args=(y_nk, K_n, ln_p0))\n",
-    "pos,*_ = sampler.run_mcmc(p0, 256)\n",
+    "ndim = 5\n",
+    "nwalkers = 8*ndim\n",
+    "p0 = np.random.normal([0.7, 7, 10, 2, 2], [1E-3]*ndim, size=(nwalkers, ndim))\n",
+    "\n",
+    "for pp in p0:\n",
+    "    assert np.all(np.isfinite(mmix(pp)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mmix([0.8, 7, 10, 2, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampler = emcee.EnsembleSampler(nwalkers, dim=ndim, lnpostfn=mmix)\n",
+    "pos,*_ = sampler.run_mcmc(p0, 1024)\n",
     "# sampler.reset()\n",
     "# _ = sampler.run_mcmc(pos, 512)"
    ]
@@ -690,11 +807,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "samples = np.vstack((sampler.chain[:,500::8]))\n",
+    "med_pars = mmix.unpack_pars(np.median(samples, axis=0))\n",
+    "med_pars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.linspace(-10, 20, 256)\n",
+    "\n",
+    "ll = mmix.ln_norm_func(y, **med_pars)\n",
+    "\n",
+    "fig,axes = plt.subplots(1, 2, figsize=(12,5), sharey=True)\n",
+    "\n",
+    "axes[0].plot(y, np.exp(ll), marker='')\n",
+    "axes[0].set_xlim(-10, 20)\n",
+    "axes[0].set_xlabel(r'$y=\\ln\\left(\\frac{s}{1\\,{\\rm m}\\,{\\rm s}^{-1}} \\right)^2$')\n",
+    "\n",
+    "axes[1].plot(np.sqrt(np.exp(y)), np.exp(ll), marker='')\n",
+    "axes[1].set_xlim(-10, 500)\n",
+    "axes[1].set_xlabel('jitter, $s$ [{0:latex_inline}]'.format(u.m/u.s))"
+   ]
   },
   {
    "cell_type": "code",
