--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -141,32 +141,45 @@ stellar companions should not survive the common-envelope \RGB\ phase.}
 
 \todo{Intro is missing many citations}
 
-Nearly all stars form with stellar companions in multiplets or clusters, through
-subsequent dynamical evolution that stars may lose their neighbors.
+Stars typically have companions.
+
 Main sequence stars in the solar neighborhood more often appear in binary or
-multiple star systems than singles (\citealt{ragavhan,tokovinin,todo}).
-- Related to fragmentation in collapsing protostellar / molecular cloud ->
-  multiple stars (e.g., \citealt{Raskutti:2016})
-- Population of stellar binaries and multiplets -> information about star
-  formation, dynamics
+multiple star systems rather than as solitary stars
+(\citealt{ragavhan,tokovinin,todo}).
+This is likely a generic outcome of star formation: turbulent fragmentation in
+collapsing protostellar clouds tends to produce multiplets of stars within
+length-scales comparable to their spheres of influence (e.g.,
+\citealt{Raskutti:2016}).
+Binary and multiple star systems are therefore of great interest in
+astrophysics: the population of stars and their companions encodes information
+about star formation processes (\citealt{todo}), stellar parameters and
+evolution (\citealt{todo}), and the dynamics of multi-body systems
+(\citealt{todo}).
 
 Even without stellar or sub-stellar companions, single stars likely have
-planetary-mass companions (\citealt{todo}.
-- Different formation channel for planets?
-- Sub-stellar companions?
+planetary-mass companions (\citealt{todo}).
+\todo{Planetary systems are interesting because...yadda yadda}
+Differences between the population of stellar companions and that of
+planetary-mass companions likely relate directly to the different formation
+channels for these objects.
 
-- Almost all stars have companions of some mass
-These systems have a large dynamic range of constituent and orbital
+\todo{should we name ``stars with companions'' something like ``stellar
+systems''?}
+Stars with companions have a large dynamic range of constituent and orbital
 characteristics.
-For example, for binary main-sequence stars, mass-ratios span from XX to 1 and
+For example, for binary main sequence stars, mass-ratios span from XX to 1 and
 periods from XX to YY years.
-- Population of companions and trends (e.g., with metallicity) -> star and
+For planetary companions of main sequence stars, \todo{}.
+- Some indication of trends (e.g., with metallicity) -> star and
   planet formation processes
 
+Most of what is known about stellar companions comes from main sequence stars.
+- Some evolved stars have special roles in exotic systems like cataclysmic
+  variables (donor stars)
+- But less is known about the population of companions to evolved stars.
 - Expect differences in evolved star pop. from main sequence populations:
   - mass loss
   - envelope -> engulfment?
-- But less is known about the population of companions to evolved stars.
 - Current samples limited in dynamical range of chemical properties, location,
   age (local to sun)
 - Brighter, but typically larger distances, direct imaging not feasible
