--- a/notebooks/infer jitter.ipynb
+++ b/notebooks/infer jitter.ipynb
@@ -39,6 +39,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File('../cache/apogee-jitter.hdf5') as f:\n",
+    "    print(len(f.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def ln_normal(x, mu, std):\n",
@@ -119,51 +131,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "This is just a sanity check that newly generated prior samples look like we expect:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "jitter_kwargs = dict(jitter=(float(run.jitter_mean),\n",
-    "                             float(run.jitter_stddev)),\n",
-    "                     jitter_unit=u.Unit(run.jitter_unit))\n",
-    "print(jitter_kwargs)\n",
-    "\n",
-    "params = JokerParams(P_min=8*u.day, P_max=32768*u.day, anomaly_tol=1E-11,\n",
-    "                     **jitter_kwargs)\n",
-    "\n",
-    "joker = TheJoker(params)\n",
-    "\n",
-    "make_prior_cache('/tmp/jitter.hdf5', joker, 100000, max_batch_size=10000)\n",
-    "\n",
-    "with h5py.File('/tmp/jitter.hdf5') as f:\n",
-    "    prior = np.array(f['samples'])\n",
-    "    \n",
-    "    # jitter is saved in km/s\n",
-    "    s = 1000 * prior[:,-1] \n",
-    "    \n",
-    "plt.hist(np.log(s**2), bins=np.linspace(-8, 18, 32));"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Looks OK to me..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "---"
    ]
   },
@@ -182,12 +149,15 @@
    "source": [
     "# The aspcapflag bitmask removes STAR_WARN\n",
     "# The starflag bitmask removes SUSPECT_BROAD_LINES \n",
-    "stars = session.query(AllStar).join(StarResult, JokerRun, Status)\\\n",
+    "# The logg cut remove TRGB stars - too much intrinsic jitter\n",
+    "stars = session.query(AllStar).join(StarResult, JokerRun, Status, AllVisitToAllStar, AllVisit)\\\n",
     "                              .filter(Status.id > 0)\\\n",
     "                              .filter(JokerRun.name == 'apogee-jitter')\\\n",
-    "                              .filter(AllStar.nvisits > 7)\\\n",
     "                              .filter(AllStar.aspcapflag.op('&')(2**7) == 0)\\\n",
     "                              .filter(AllStar.starflag.op('&')(2**17) == 0)\\\n",
+    "                              .filter(AllStar.logg > 2)\\\n",
+    "                              .group_by(AllStar.apstar_id)\\\n",
+    "                              .having(func.count(AllVisit.id) >= 15)\\\n",
     "                              .all()\n",
     "#                              .limit(1024).all()\n",
     "print(len(stars))"
@@ -196,7 +166,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "K_n = []\n",
@@ -223,6 +195,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(K_n)\n",
+    "plt.yscale('log')\n",
+    "plt.xlabel('$K_n$')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for apogee_id in apogee_ids[(K_n < 10)][:20]:\n",
+    "# for apogee_id in apogee_ids[(K_n > 10) & (K_n < 100)][:20]:\n",
+    "# for apogee_id in apogee_ids[(K_n > 100) & (K_n > 10)][:20]:\n",
+    "    star = session.query(AllStar).filter(AllStar.apogee_id == apogee_id).limit(1).one()\n",
+    "    data = star.apogeervdata(clean=True)\n",
+    "\n",
+    "    samples = JokerSamples(trend_cls=VelocityTrend1, **load_samples(samples_file, apogee_id))\n",
+    "    \n",
+    "    fig, axes = plt.subplots(2, 1, figsize=(10, 10), sharex=True)\n",
+    "    \n",
+    "    fig = plot_data_orbits(data, samples, ax=axes[0])\n",
+    "    axes[0].set_title(r'$s_{{\\rm max}} = ${0:.3f}'.format(samples['jitter'].max().to(u.m/u.s)), \n",
+    "                      fontsize=18)\n",
+    "    \n",
+    "    # residuals\n",
+    "    ax = axes[1]\n",
+    "    for label, j in zip(['max($P$)', 'min($P$)'], [samples['P'].argmax(), samples['P'].argmin()]):\n",
+    "        this_samples = samples[j]\n",
+    "\n",
+    "        trend_samples = dict()\n",
+    "        for k in samples.trend_cls.parameters:\n",
+    "            trend_samples[k] = this_samples.pop(k)\n",
+    "        trend = samples.trend_cls(**trend_samples)\n",
+    "        orbit = RVOrbit(trend=trend, **this_samples)\n",
+    "\n",
+    "        ax.errorbar(data.t.mjd, (data.rv - orbit.generate_rv_curve(data.t)).to(u.km/u.s).value, \n",
+    "                    data.stddev.to(u.km/u.s).value,\n",
+    "                    linestyle='none', marker='o', label=label)\n",
+    "        \n",
+    "    ax.set_ylabel('residuals [{0:latex_inline}]'.format(u.km/u.s))\n",
+    "    ax.set_xlabel('BMJD')\n",
+    "    ax.axhline(0.)\n",
+    "    ax.legend(loc='best', fontsize=16)\n",
+    "    \n",
+    "    fig.savefig(\"../plots/1-nsamples <10/{0}.png\".format(apogee_id), dpi=200)\n",
+    "    # fig.savefig(\"../plots/2-nsamples 10\u2013100/{0}.png\".format(apogee_id), dpi=200)\n",
+    "    # fig.savefig(\"../plots/3-nsamples >100/{0}.png\".format(apogee_id), dpi=200)\n",
+    "    plt.close('all')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -232,7 +263,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# K_n = []\n",
@@ -277,7 +310,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ln_p0 = ln_normal(y_nk, float(run.jitter_mean), float(run.jitter_stddev))"
@@ -435,7 +470,7 @@
     "print(i)\n",
     "\n",
     "star = session.query(AllStar).filter(AllStar.apogee_id == apogee_ids[i]).limit(1).one()\n",
-    "data = star.apogeervdata()\n",
+    "data = star.apogeervdata(clean=True)\n",
     "\n",
     "samples = JokerSamples(trend_cls=VelocityTrend1, **load_samples(samples_file, apogee_ids[i]))\n",
     "_ = plot_data_orbits(data, samples)\n",
@@ -481,7 +516,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Model:\n",
@@ -566,7 +603,7 @@
     "slc = (slice(None),) # all\n",
     "# slc = np.array([225, 139])\n",
     "\n",
-    "mm = Model(y_nk[slc], K_n[slc], ln_p0[slc])\n",
+    "mm = Model(y_nk[slc], K_n[slc], ln_p0[slc], n_components=1)\n",
     "mm([-2, 4.]), mm([2, 4.])"
    ]
   },
@@ -666,10 +703,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "mu_grid = np.linspace(-10, 10, 27)\n",
+    "mmix = Model(y_nk[slc], K_n[slc], ln_p0[slc], \n",
+    "             n_components=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mu_grid = np.linspace(-10, 20, 27)\n",
     "# var_grid = np.linspace(0.1, 10, 25)**2\n",
     "std_grid = np.logspace(-3, 1.5, 25)\n",
     "mu_grid, std_grid = np.meshgrid(mu_grid, std_grid)\n",
@@ -732,6 +783,88 @@
    },
    "outputs": [],
    "source": [
+    "from scipy.optimize import minimize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mmix = Model(y_nk[slc], K_n[slc], ln_p0[slc], \n",
+    "             n_components=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# p0 = [0.8, 7, 10, 2, 2]\n",
+    "p0 = [10., 2]\n",
+    "mmix(p0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = minimize(lambda *args: -mmix(*args), x0=p0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.linspace(-10, 20, 256)\n",
+    "\n",
+    "min_pars = mmix.unpack_pars(res.x)\n",
+    "ll = mmix.ln_norm_func(y, **min_pars)\n",
+    "\n",
+    "fig,axes = plt.subplots(1, 2, figsize=(12,5))\n",
+    "\n",
+    "axes[0].plot(y, np.exp(ll), marker='')\n",
+    "axes[0].set_xlim(-10, 20)\n",
+    "axes[0].set_xlabel(r'$y=\\ln\\left(\\frac{s}{1\\,{\\rm m}\\,{\\rm s}^{-1}} \\right)^2$')\n",
+    "\n",
+    "s = np.sqrt(np.exp(y))\n",
+    "axes[1].plot(s, np.exp(ll) * 2/s, marker='')\n",
+    "axes[1].set_xlim(-0.1, 400)\n",
+    "axes[1].set_xlabel('jitter, $s$ [{0:latex_inline}]'.format(u.m/u.s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "import emcee"
    ]
   },
@@ -750,7 +883,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ndim = 5\n",
@@ -785,7 +920,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sampler.chain.shape"
@@ -794,7 +931,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for dim in range(sampler.dim):\n",
@@ -807,7 +946,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "samples = np.vstack((sampler.chain[:,500::8]))\n",
@@ -818,7 +959,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y = np.linspace(-10, 20, 256)\n",
@@ -831,7 +974,8 @@
     "axes[0].set_xlim(-10, 20)\n",
     "axes[0].set_xlabel(r'$y=\\ln\\left(\\frac{s}{1\\,{\\rm m}\\,{\\rm s}^{-1}} \\right)^2$')\n",
     "\n",
-    "axes[1].plot(np.sqrt(np.exp(y)), np.exp(ll), marker='')\n",
+    "s = np.sqrt(np.exp(y))\n",
+    "axes[1].plot(s, np.exp(ll) * 2/s, marker='')\n",
     "axes[1].set_xlim(-10, 500)\n",
     "axes[1].set_xlabel('jitter, $s$ [{0:latex_inline}]'.format(u.m/u.s))"
    ]
