--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -434,7 +434,7 @@ Return to our various assumptions and make sure that we discuss them
 
 \acknowledgements
 
-It is a pleasure to thank XX.
+It is a pleasure to thank Keith Hawkins (Columbia), XXXXXXX.
 
 The authors are pleased to acknowledge that the work reported on in this
 paper was substantially performed at the TIGRESS high performance computer
