--- a/notebooks/infer jitter.ipynb
+++ b/notebooks/infer jitter.ipynb
@@ -209,6 +209,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -812,7 +813,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "res = minimize(lambda *args: -mmix(*args), x0=p0)"
