--- a/notebooks/apogee-jitter results.ipynb
+++ b/notebooks/apogee-jitter results.ipynb
@@ -43,7 +43,8 @@
    },
    "outputs": [],
    "source": [
-    "TWOFACE_CACHE_PATH = path.abspath('../cache/')"
+    "TWOFACE_CACHE_PATH = path.abspath('../cache/')\n",
+    "samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter.hdf5')"
    ]
   },
   {
@@ -75,14 +76,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "stars = session.query(AllStar).join(StarResult, JokerRun, Status)\\\n",
-    "                              .filter(Status.id == 1).all()\n",
-    "H_mag = np.array([s.h for s in stars])"
+    "## Plot a specific star"
    ]
   },
   {
@@ -91,56 +88,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "star = stars[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(H_mag, bins=np.linspace(6, 14, 11));"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter.hdf5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# with h5py.File(samples_file) as f:\n",
-    "#     for key in f:\n",
-    "#         f[key].attrs['t0_bmjd'] = 0."
+    "apogee_id = '2M17533701-2525544'\n",
+    "\n",
+    "with h5py.File(samples_file) as f:\n",
+    "    samples = JokerSamples.from_hdf5(f[apogee_id])\n",
+    "    \n",
+    "print(len(samples))\n",
+    "    \n",
+    "star = session.query(AllStar).filter(AllStar.apogee_id == apogee_id).limit(1).one()\n",
+    "data = star.apogeervdata(clean=True)\n",
+    "fig = plot_data_orbits(data, samples, xlim_choice='tight')\n",
+    "fig.axes[0].set_title('{0}: {1}'.format(apogee_id, star.results[0].status.message))"
    ]
   },
   {
@@ -159,21 +117,14 @@
     "# needs more samples\n",
     "stars1 = session.query(AllStar).join(StarResult, JokerRun, Status)\\\n",
     "                .filter(JokerRun.name == 'apogee-jitter')\\\n",
-    "                .filter(Status.id == 1).all()\n",
+    "                .filter((AllStar.logg < 3.5) & (AllStar.logg > -9999))\\\n",
+    "                .filter(Status.id == 1).all() # only look at RGB for now\n",
     "\n",
     "# needs mcmc\n",
     "stars2 = session.query(AllStar).join(StarResult, JokerRun, Status)\\\n",
     "                .filter(JokerRun.name == 'apogee-jitter')\\\n",
-    "                .filter(Status.id == 2).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stars1[0]"
+    "                .filter((AllStar.logg < 3.5) & (AllStar.logg > -9999))\\\n",
+    "                .filter(Status.id == 2).all() # only look at RGB for now"
    ]
   },
   {
@@ -188,43 +139,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with h5py.File(samples_file) as f:\n",
-    "    samples1 = JokerSamples.from_hdf5(f['2M04171719+4724006'])\n",
-    "    \n",
-    "with h5py.File('dumb_test.hdf5') as f:\n",
-    "    samples2 = JokerSamples.from_hdf5(f)\n",
-    "    \n",
-    "len(samples1), len(samples2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "star = session.query(AllStar).filter(AllStar.apogee_id == '2M04171719+4724006').limit(1).one()\n",
-    "data = star.apogeervdata(clean=True)\n",
-    "\n",
-    "fig = plot_data_orbits(data, samples1, xlim_choice='tight')\n",
-    "fig.axes[0].set_title('{0} index: {1}'.format(star.results[0].status.message, i))\n",
-    "\n",
-    "fig = plot_data_orbits(data, samples2, xlim_choice='tight')\n",
-    "fig.axes[0].set_title('{0} index: {1}'.format(star.results[0].status.message, i))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "for i, star in enumerate(stars1[80:90]):\n",
+    "for i, star in enumerate(stars1[28:38]):\n",
     "    with h5py.File(samples_file) as f:\n",
     "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
     "\n",
@@ -237,6 +157,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -309,7 +230,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m2_mins = []\n",
@@ -325,7 +248,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "all_pars = None\n",
@@ -374,7 +299,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(12, 5))\n",
@@ -394,6 +321,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -416,7 +344,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(6, 5))\n",
@@ -442,7 +372,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(6, 5))\n",
@@ -468,7 +400,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(6, 5))\n",
@@ -489,7 +423,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(1, 2, sharex=True, figsize=(10,4))\n",
@@ -521,7 +457,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sub = all_pars[all_pars['snr'] > 100]\n",
@@ -584,7 +522,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "stars = session.query(AllStar).join(StarResult, JokerRun)\\\n",
@@ -707,7 +647,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "K_percentiles = np.zeros((len(stars), 3))\n",
@@ -721,7 +663,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m2_min_percentiles = np.zeros((len(stars), 3))\n",
@@ -736,7 +680,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Where the companion is probably massive\n",
@@ -757,7 +703,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# star = stars[big_m2_idx[0]]\n",
@@ -976,7 +924,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
